# supply-chain-board

./: .gitignore  .npmrc  CLAUDE.md  README.md  adonisrc.ts  benchmark_loading.py  bootstrap.ps1  bootstrap.sh  components.json  dev.sh  esbuild.config.mjs  package-lock.json  package.json  revue-issue-41.txt  skills-lock.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/planning-engine/: CLAUDE.md  README.md  analyze_charge.py  evaluate_reality.py  main.py  menu.py  pyproject.toml  requirements.txt
apps/planning-engine/.claude/plans/: integration-previsions-export.md  migration-besoins-clients.md  virtual-stock-allocation.md
apps/planning-engine/.claude/skills/: rapport-charge.skill
apps/planning-engine/config/: buffer_thresholds.json  calendar.json  ga.json  holidays_2026.json  lines.json  weights.json
apps/planning-engine/data/: schedule_history.db
apps/planning-engine/docs/: ARCHITECTURE.md  analyse-lot-eco.md  analyse-metier-approfondie.md  plan-analyse-historique.md  plan-implementation-recos.md  plan-refacto-logique-planning-engine.md  prd-date-debut-of.md
apps/planning-engine/memory/: MEMORY.md  commands.md
apps/planning-engine/planning_engine/: main.py
apps/planning-engine/tests/: README.md  conftest.py  test_allocation_manager.py  test_analyse_rupture.py  test_api_ga_integration.py  test_availability_kernel.py  test_besoin_client.py  test_charge_calculator.py  test_country_filtering.py  test_domain_rules.py  test_eol_residuals.py  test_feasibility_diagnostics.py  test_feasibility_service.py  test_forecast_consumption.py  test_formatters_summary.py  test_gui_api.py  test_matching.py  test_no_double_allocation.py  test_of.py  test_planning_board.py  test_planning_board_feasibility.py  test_planning_board_orders.py  test_recursive_checker.py  test_residual_fabrication.py  test_scheduler_capacity.py  test_scheduler_kpi.py  test_scheduling_reporting.py  test_stock_reconstruction.py
apps/suivi-commandes/: .gitignore  ENRICHMENT_TODO.md  api_server.py  dashboard.py  data_loader.py  pyproject.toml  requirements.txt  test.py  ui_components.py
apps/suivi-commandes/tests/: test_api_endpoints.py  test_api_server.py  test_domain_status.py
services/integration-hub/: README.md  pyproject.toml
services/integration-hub/app/: main.py
services/integration-hub/integration_hub/: api.py
services/integration-hub/tests/: test_api.py
(+1596 files in other folders)
