[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integration-hub"
version = "0.1.0"
description = "Orchestration API for supply-chain board workflows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.8.0",
  "domain-contracts>=0.1.0",
  "integration-sdk>=0.1.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "integration_hub*"]
